2-kubernetes-monitoring/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapp
  labels:
    app: demo-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-webapp
  template:
    metadata:
      labels:
        app: demo-webapp
    spec:
      containers:
      - name: demo-webapp
        image: yeasy/simple-web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
          limits:
            cpu: "1000m"
            memory: "500Mi"
