2-kubernetes-monitoring/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-webapp-service
  labels:
    app: demo-webapp
spec:
  selector:
    app: demo-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
