2-kubernetes-monitoring/web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: base-host.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-webapp-service
            port:
              number: 80
